--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,24 @@
 body {
   margin: 0;
   padding: 0;
+  font-size: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+@media screen and (min-width:760px){
+  body{
+    font-size:24px;
+  }
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+@media screen and (max-width:700px){
+  body{
+    font-size:15px;
+  }
 }
